# gene

./: .editorconfig  .gitignore  Cargo.toml  IDEAS.md  LICENSE  README-2.org  README.md  README.org  dump.rs
config/: Cargo.toml
core/: Cargo.toml
core/src/: lib.rs
docs/tubitak/: report-2.md  report-example.md  report.md  report.org
docs/tubitak/headers/: 01-OZET.md  02-AMAC.md  03-GIRIS.md  04-YONTEM.md  05-BULGULAR.md  06-SONUC_VE_TARTISMA.md  07-ONERILER.md
gene/: Cargo.toml
gene-config/: Cargo.toml  README.md
gene-config/src/: backends.rs  config.rs  lib.rs
gene-config/src/error/: puke.rs
gene-plug/: Cargo.toml
gene-pmget/: Cargo.toml  README.md
gene-pmm/: Cargo.toml
gene-pmm/src/: REAMDE.md  gene.rs  lib.rs  mir.rs  package_manager.rs  pm.rs  raw_args.rs
gene-pmm/src/error/: mod.rs  puke.rs
gene-pmm/src/spm/pacman/: mod.rs  pacman.rs
gene-proc/: Cargo.toml
gene-proc/src/: lib.rs
gene-utils/: Cargo.toml
gene-utils/src/: args.rs
gene/src/: main.rs
modules/: Cargo.toml
plug/: Cargo.toml
pmm/: Cargo.toml
pmm/src/: REAMDE.md
