[workspace]
members = ["gene-config", "gene", "gene-plug", "gene-pmm"]

default-members = ["gene"]

resolver = "2"

 [workspace.package]
 edition = "2021"
 keywords = ["package-manager"]
 license = "MIT"
 homepage = "https://github.com/utfeight/gene"
 repository = "https://github.com/utfeight/gene"
 version = "0.1.0"
 authors = ["utfeight <utfeightt@gmail.com>"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
debug = false
strip = true