[package]
name = "gene-config"
edition.workspace = true
keywords.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
version.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
toml = "0.8.8"
config = { version = "0.13.4" }
dirs = "5.0.1"
thiserror = "1.0.50"
