[package]
name = "gene-pmm"
edition.workspace = true
keywords.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
version.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
thiserror = "1.0.50"
anyhow = "1.0.75"
gene-proc = { version = "*", path = "../gene-proc" }
gene-utils = { version = "*", path = "../gene-utils" }
